configs/dev/v1_namespace_jenkins-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: jenkins-dev
    app.kubernetes.io/version: "2.495"
  name: jenkins-dev
