configs/dev/apps_v1_deployment_jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.kubernetes.io/created-by: kustomize
    meta.kubernetes.io/documentation: https://www.jenkins.io/doc/book/installing/kubernetes
    meta.kubernetes.io/team-owner: devops
  labels:
    app.kubernetes.io/component: ci-cd-tool
    app.kubernetes.io/instance: jenkins-dev
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jenkins-master
    app.kubernetes.io/part-of: devops-tooling
    app.kubernetes.io/version: "2.495"
  name: jenkins
  namespace: jenkins-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ci-cd-tool
      app.kubernetes.io/instance: jenkins-dev
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: jenkins-master
      app.kubernetes.io/part-of: devops-tooling
      app.kubernetes.io/version: "2.495"
  template:
    metadata:
      annotations:
        meta.kubernetes.io/created-by: kustomize
        meta.kubernetes.io/documentation: https://www.jenkins.io/doc/book/installing/kubernetes
        meta.kubernetes.io/team-owner: devops
      labels:
        app.kubernetes.io/component: ci-cd-tool
        app.kubernetes.io/instance: jenkins-dev
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: jenkins-master
        app.kubernetes.io/part-of: devops-tooling
        app.kubernetes.io/version: "2.495"
    spec:
      containers:
      - env:
        - name: JENKINS_HOME
          value: /var/jenkins_home
        - name: CACHE_DIR
          value: /tmp/jenkins
        - name: JAVA_OPTS
          value: -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.local.only=false
            -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.port=5555 -Dcom.sun.management.jmxremote.rmi.port=5555
            -Djava.rmi.server.hostname=127.0.0.1
        image: jenkins/jenkins:2.495-jdk21
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: jnlp
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-data
        - mountPath: /var/jenkins_home/plugins
          name: jenkins-plugins-data
        - mountPath: /tmp/logging.properties
          name: logging-config
          subPath: logging.properties
        - mountPath: /tmp/jenkins
          name: jenkins-cache
      - args:
        - "9090"
        - /tmp/jmx-config
        image: bitnami/jmx-exporter:1.1.0-debian-12-r3
        name: prometheus-exporter
        ports:
        - containerPort: 9090
          name: metrics
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 20Mi
        volumeMounts:
        - mountPath: /tmp/jmx-config
          name: jmx-config
          subPath: jmx-config.yaml
      serviceAccountName: jenkins
      volumes:
      - emptyDir: {}
        name: jenkins-data
      - emptyDir: {}
        name: jenkins-plugins-data
      - configMap:
          name: logging-config
        name: logging-config
      - emptyDir: {}
        name: jenkins-plugin-manager
      - emptyDir: {}
        name: jenkins-cache
      - configMap:
          name: jmx-config
        name: jmx-config
      - configMap:
          name: desired-plugins
        name: desired-plugins
