configs/dev/v1_service_prometheus-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jenkins-dev
    app.kubernetes.io/version: "2.495"
  name: prometheus-exporter
  namespace: jenkins-dev
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/instance: jenkins-dev
    app.kubernetes.io/version: "2.495"
  type: ClusterIP
