configs/dev/route.openshift.io_v1_route_jenkins.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    meta.kubernetes.io/created-by: kustomize
    meta.kubernetes.io/documentation: https://www.jenkins.io/doc/book/installing/kubernetes
    meta.kubernetes.io/team-owner: devops
  labels:
    app.kubernetes.io/component: ci-cd-tool
    app.kubernetes.io/instance: jenkins-dev
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: jenkins-master
    app.kubernetes.io/part-of: devops-tooling
    app.kubernetes.io/version: "2.495"
  name: jenkins
  namespace: jenkins-dev
spec:
  host: jenkins.apps-crc.testing
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
